Dibuat menggunakan Colaboratory

--- a/Pandas_Handling_Missing_Value.ipynb
+++ b/Pandas_Handling_Missing_Value.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Pandas Handling Missing Value.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPLeizcb3eNYWrR5vPeSKeV",
+      "authorship_tag": "ABX9TyMhoLqn7VVTAG75qJA+i2Ix",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,7 +48,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -76,7 +76,7 @@
       "source": [
         "import pandas as pd"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -93,7 +93,7 @@
         "df = pd.read_csv('drive/My Drive/Belajar/Data Exploration/Data Hamil/data.csv')\r\n",
         "df.head(10)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -342,7 +342,7 @@
       "source": [
         "df.info()"
       ],
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -384,7 +384,7 @@
       "source": [
         "print('Data yang terdapat missing value \\n',df.columns[df.isnull().any()].values)"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,7 +403,7 @@
       },
       "source": [
         "### Handling Missing value pada data kontinu\r\n",
-        "Untuk melakukan handling missing value pada data kontinu, digunakan median impurity, yaitu mengganti nilai kosong dengan median dari kolom\r\n"
+        "Untuk melakukan handling missing value pada data kontinu, digunakan median imputation, yaitu mengganti nilai kosong dengan median dari kolom\r\n"
       ]
     },
     {
@@ -419,7 +419,7 @@
         "med = df.median(skipna = True)\r\n",
         "med"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -449,7 +449,7 @@
       "source": [
         "df_clean = df.fillna(med)"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +476,7 @@
         "rows_with_NaN = df_clean[row_has_NaN]\r\n",
         "print(rows_with_NaN)"
       ],
-      "execution_count": 145,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,7 +500,7 @@
       },
       "source": [
         "### Handling Missing value pada data categorical\r\n",
-        "Untuk melakukan handling missing value pada data kontinu, digunakan mode impurity, yaitu mengganti nilai kosong dengan mode dari kolom\r\n"
+        "Untuk melakukan handling missing value pada data kontinu, digunakan mode imputation, yaitu mengganti nilai kosong dengan mode dari kolom\r\n"
       ]
     },
     {
@@ -517,7 +517,7 @@
         "mod=pd.Series(mod.T[0])\r\n",
         "mod"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -554,7 +554,7 @@
       "source": [
         "df_clean = df_clean.fillna(mod)"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -570,7 +570,7 @@
       "source": [
         "df_clean.head()"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -734,7 +734,7 @@
       "source": [
         "df_clean.describe()"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -872,7 +872,7 @@
       "source": [
         "df_clean.to_csv('data_clean.csv')"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": []
     }
   ]
